Fixed invalid schematic difficulty causing buggy menu results